[package]
name = "messing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy-inspector-egui = "0.11.0"
bevy_kira_audio = { version = "0.10.0", features = ["ogg", "wav"]}

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = [
    # These are the default features:
    # (re-enable whichever you like)

    # Bevy functionality:
#    "animation",          # Animation support
#    "bevy_gilrs",         # Gamepad input support
#    "bevy_audio",         # Builtin audio
    "bevy_winit",         # Window management
#    "x11",                # Linux: Support X11 windowing system
#    "filesystem_watcher", # Asset hot-reloading
#    "render",             # Graphics Rendering

    ## "render" actually just includes:
    ## (feel free to use just a subset of these, instead of "render")
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_pbr",           # 3D (physically-based) rendering
#    "bevy_gltf",          # GLTF 3D assets format support
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit

    # File formats:
    "png",
#    "hdr",
#    "vorbis",
]